# icp_rust

./: .gitignore  Cargo.toml
icp_rust/: Cargo.toml
icp_rust/benches/: icp_benchmark.rs
icp_rust/src/: lib.rs  util.rs
icp_rust_cli/: Cargo.toml
icp_rust_cli/src/: main.rs
