[package]
name = "icp_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rerun = "0.14.1"
nalgebra = "0.32.4"
kd-tree = { version = "0.5.3", features = ["nalgebra"] }
typenum = "1.17.0"
log = "0.4.21"

[profile.release]
debug = true

[dev-dependencies]
criterion = "0.5.1"
pcd-rs = "0.10.0"

[[bench]]
name = "icp_benchmark"
harness = false
